assets/mobile.css
.cg-square.selected {
  background: rgba(216, 85, 0, 0.3);
}
.cg-piece.dragging {
  width: 200%;
  height: 200%;
}
#cg-moving-square {
  display: none;
  position: absolute;
  background-color: transparent;
  border: 1px solid rgba(255, 255, 255, 0.5);
  -webkit-transform: translate3d(0,0,0);
}

